nginx-deployment.yaml
apiVersion: apps/v1        # kubectl api-versions
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: reg.xiaodonghub.com/library/nginx:1.15
        ports:
        - containerPort: 80
