etcd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-demo
  template:
    metadata:
      labels:
        app: java-demo 
    spec:
      containers:
      - name: tomcat 
        image: reg.xiaodonghub.com/library/etcdmy:latest
        ports:
        - containerPort: 8080
          name: web
        - containerPort: 22
          name: ssh
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 12
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
          failureThreshold: 12
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  selector:
    app: java-demo
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8080
      nodePort: 30080

---
apiVersion: v1
kind: Service
metadata:
  name: ssh
spec:
  type: NodePort
  selector:
    app: java-demo
  ports:
    - protocol: TCP
      port: 8022
      targetPort: 22
      nodePort: 30022
