foo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: default
spec:
  clusterIP: 10.0.0.123
  type: NodePort
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    app: nginx
